adding MK website

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <h1 class="hero-title">Campus Ministry<br>General Assembly</h1>
                 <p class="hero-description">A Weekend of Faith, Fellowship & Growth</p>
                 <div class="hero-theme">
-                    <i class="fas fa-quote-left"></i>
-                    <span>Do all to the glory of God</span>
-                    <i class="fas fa-quote-right"></i>
+                    <!-- <i class="fas fa-quote-left"></i> -->
+                    <span>"Do all to the glory of God"</span>
+                    <!-- <i class="fas fa-quote-right"></i> -->
                     <p class="bible-verse">1 Corinthians 10:31</p>
                 </div>
                 <div class="hero-dates">
@@ -475,6 +475,15 @@
                     <h3>YouTube</h3>
                     <p>Subscribe for sermons, events, and spiritual content</p>
                     <a href="https://www.youtube.com/@usa_campus_ministry" target="_blank" class="btn btn-social">Subscribe</a>
+                </div>
+                
+                <div class="connect-card">
+                    <div class="connect-icon">
+                        <i class="fas fa-globe"></i>
+                    </div>
+                    <h3>MK Website</h3>
+                    <p>Visit our official Mahibere Kidusan website for teachings and resources</p>
+                    <a href="https://eotcmk.org/e/" target="_blank" class="btn btn-social">Visit Website</a>
                 </div>
             </div>
         </div>
