styling for mobile phone fix

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                         <div class="contact-details">
                             <h4>Organization</h4>
                             <p>Ethiopian Orthodox Tewahedo Church<br>
-                            Atlanta Mahibere Kidusan Campus Ministry</p>
+                            Mahibere Kidusan Campus Ministry</p>
                         </div>
                     </div>
                     
@@ -580,7 +580,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Ethiopian Orthodox Tewahedo Church - Atlanta Mahibere Kidusan Campus Ministry. All rights reserved.</p>
+                <p>&copy; 2025 Ethiopian Orthodox Tewahedo Church - Mahibere Kidusan Campus Ministry. All rights reserved.</p>
             </div>
         </div>
     </footer>
