--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="hero-buttons">
                     <a href="#registration" class="btn btn-primary">Register Now</a>
-                    <a href="#schedule" class="btn btn-secondary">View Schedule</a>
+                    <a href="#schedule" class="btn btn-primary">View Schedule</a>
                 </div>
             </div>
         </div>
