--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7TH EOTC MK USA Campus Ministry General Assembly 2025 | EOTC</title>
+    <title>7th EOTC MK USA Campus Ministry General Assembly 2025 | EOTC</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -39,7 +39,7 @@
         </div>
         <div class="hero-content">
             <div class="hero-text">
-                <span class="hero-subtitle">7TH EOTC MK USA</span>
+                <span class="hero-subtitle">7<sup>th</sup> EOTC MK USA</span>
                 <h1 class="hero-title">Campus Ministry<br>General Assembly</h1>
                 <p class="hero-description">A Weekend of Faith, Fellowship & Growth</p>
                 <div class="hero-theme">
@@ -526,7 +526,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Planning Committee</h4>
-                            <p>7TH EOTC MK USA Campus Ministry General Assembly Planning Committee</p>
+                            <p>7<sup>th</sup> EOTC MK USA Campus Ministry General Assembly Planning Committee</p>
                         </div>
                     </div>
                 </div>
