improving writup of 7th

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     <div class="message-card">
                         <h3>A Personal Message</h3>
                         <p>"Come expectant. Come ready. Come open. Let this be the weekend that revives your soul, renews your faith, and reminds you of the incredible love God has for you and the purpose He's placed within you."</p>
-                        <p class="message-signature">- With love and prayers,<br>7TH EOTC MK USA CMGA Planning Committee</p>
+                        <p class="message-signature">- With love and prayers,<br>7<sup>th</sup> EOTC MK USA CMGA Planning Committee</p>
                         
                         <div class="feedback-note">
                             <h4>Share Your Experience</h4>
@@ -556,7 +556,7 @@
                         <img src="imgs/Mahibere_Kidusan_logo.png" alt="Mahibere Kidusan Logo" class="footer-logo-img">
                         <div>
                             <h4>CMGA 2025</h4>
-                            <p>7TH EOTC MK USA Campus Ministry General Assembly</p>
+                            <p>7<sup>th</sup> EOTC MK USA Campus Ministry General Assembly</p>
                             <p>"Do all to the glory of God" - 1 Corinthians 10:31</p>
                         </div>
                     </div>
