--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <h3>Spiritual Leaders</h3>
                         <p>We are honored to be joined by:</p>
                         <ul class="leaders-list">
-                            <li><i class="fas fa-star"></i> Kesis Hermon Tekie</li>
+                            <li><i class="fas fa-star"></i> Kesis Hermon Tekle</li>
                             <li><i class="fas fa-star"></i> Kesis Nebiyou</li>
                             <li><i class="fas fa-star"></i> Dn. Dawit Muluneh</li>
                             <li><i class="fas fa-star"></i> Dn. Yosyas Assefa</li>
